# armagnac

./: Cargo.toml  README.md
benches/: benchmark.c  benchmark.elf  benchmark.rs  link.ld  makefile  symbols.txt
src/: align.rs  arith.rs  arm.rs  condition.rs  coprocessor.rs  decoder.rs  harness.rs  helpers.rs  irq.rs  it_state.rs  lib.rs  memory.rs  memory_protection_unit.rs  registers.rs  symbols.rs  system_control.rs  test_decoder.txt
src/core/: arm.rs  config.rs  coprocessor.rs  exclusive_monitor.rs  irq.rs  it_state.rs  mod.rs
src/instructions/: adc.rs  add.rs  adr.rs  and.rs  asr.rs  b.rs  bfc.rs  bfi.rs  bic.rs  bkpt.rs  bl.rs  blx.rs  bx.rs  cbnz.rs  cdp.rs  clrex.rs  clz.rs  cmn.rs  cmp.rs  cps.rs  csdb.rs  dbg.rs  dmb.rs  dsb.rs  eor.rs  isb.rs  it.rs  ldc.rs  ldm.rs  ldmdb.rs  ldr.rs  ldrb.rs  ldrbt.rs  ldrd.rs  ldrex.rs  ldrexb.rs  ldrexh.rs  ldrh.rs  ldrht.rs  ldrsb.rs  (+85 more)
src/mpu/: mod.rs  v7m.rs  v8m.rs
tests/: emulate.rs  encode.s  fibonacci.c  fibonacci.rs  link.ld  makefile  memcpy.c  memcpy.rs  parse.py  symbols.txt  tests-vectors.s  tests.c  tests.elf
