[package]
name = "armagnac"
description = "A simple ARM emulation library for simulating embedded systems"
repository = "https://github.com/Ledger-Donjon/armagnac"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arm", "emulator"]
categories = ["simulation", "embedded", "virtualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.16.0"
num_enum = "0.7.2"
object = "0.35.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.9.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
